fixed services layout

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
             <ul class=" nav_items flex">
                 <li><a class="nav_item" href="/projects.html">Home</a></li>
                 <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/about.html">Services</a></li>
+                <li><a class="nav_item" href="/services.html">Services</a></li>
                 <li><a class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
@@ -68,7 +68,7 @@
                             growing business. With the increasing demand for their services, they required a reliable
                             and efficient IT solution that could meet their unique needs and support their growing
                             business.</span>
-                            <a href="about.html#services" class="btn btn_sec card_btn">Read more <i
+                            <a href="/projects/inked-productions.html" class="btn btn_sec card_btn">Read more <i
                                 class="fa fa-arrow-right"></i></a>
                     </section>
                 </div>
@@ -106,7 +106,6 @@
                 </div>
             </div>
         </section>
-
 
         <footer class="flex row">
             <!-- footer nav  -->
