--- a/services.html
+++ b/services.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <!-- navbar -->
+
         <nav class="header flex container relative">
             <!-- main brand logo -->
 
@@ -31,8 +32,8 @@
 
             <ul class=" nav_items flex">
                 <li><a class="nav_item" href="/projects.html">Home</a></li>
-                <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
-                <li><a class="nav_item" href="/about.html">Services</a></li>
+                <li><a class="nav_item" href="/about.html">About</a></li>
+                <li><a caria-current="page" class="nav_item" href="/services.html">Services</a></li>
                 <li><a class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
@@ -48,7 +49,8 @@
             </div>
 
         </section>
-        <section class="container about_services section_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Cloud Computing Solutions</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/hB1NVzqn7PU"
@@ -82,7 +84,8 @@
             </article>
 
         </section>
-        <section class="container about_servicessection_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/1vV0t2XbtuU"
@@ -109,7 +112,8 @@
                 </ul>
             </article>
         </section>
-        <section class="container about_servicessection_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Network Design and Implementation</h2>
 
             <article class="services_article_block  grid">
@@ -134,7 +138,8 @@
                 </ol>
             </article>
         </section>
-        <section class="container about_servicessection_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Managed IT Services</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/4vkIaBUsNvI"
@@ -160,7 +165,8 @@
                 </ul>
             </article>
         </section>
-        <section class="container about_servicessection_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/fGdqnWWAXE0"
@@ -186,7 +192,8 @@
                 </ul>
             </article>
         </section>
-        <section class="container about_servicessection_spacing grid services_articles">
+
+        <section class="about_services container section_spacing grid services_articles">
             <h2>Quality Assurance and Testing</h2>
             <article class="services_article_block  grid">
                 <iframe src="https://www.youtube.com/embed/0hzqHwu1i_I"
