--- a/projects/inked-productions.html
+++ b/projects/inked-productions.html
@@ -61,18 +61,18 @@
                 growing business. With the increasing demand for their services, they required a reliable
                 and efficient IT solution that could meet their unique needs and support their growing
                 business.</p>
-                <h3 class="sub_title">Challenge</h3>
-                <p class="article_text">Inked Productions was in need of setting up a film edit suite with three rooms, all
+                <h3>Challenge</h3>
+                <p>Inked Productions was in need of setting up a film edit suite with three rooms, all
                     connected by a shared storage solution. They were in search of a reliable and efficient system to
                     support their film production process.</p>
-                <h3 class="sub_title">Solution</h3>
-                <p class="article_text">ByteSized Solutions implemented a cloud-based storage solution that would allow the
+                <h3>Solution</h3>
+                <p>ByteSized Solutions implemented a cloud-based storage solution that would allow the
                     team at Inked Productions to access their files and projects from any room. This solution made it
                     possible for the team to work together seamlessly on large-scale projects without having to transfer
                     files between rooms. The ByteSized Solutions team also set up a secure network that ensured the
                     confidentiality of the clients' projects and data.</p>
-                <h3 class="sub_title">Impact</h3>
-                <p class="article_text">The implementation of the cloud-based storage solution and secure network had a
+                <h3>Impact</h3>
+                <p>The implementation of the cloud-based storage solution and secure network had a
                     significant impact on the productivity and workflow of Inked Productions. The team was able to complete
                     projects faster and more efficiently, with less downtime. The clients were also pleased with the level
                     of security and peace of mind that came with having their projects and data protected.
