--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a aria-current="page" class="nav_item" href="/projects.html">Home</a></li>
+                <li><a aria-current="page" class="nav_item" href="/index.html">Home</a></li>
                 <li><a class="nav_item" href="/about.html">About</a></li>
                 <li><a class="nav_item" href="/about.html">Services</a></li>
                 <li><a class="nav_item" href="/projects.html">Projects</a></li>
