--- a/projects.html
+++ b/projects.html
@@ -30,10 +30,10 @@
             <input type="checkbox" id="toggle" hidden>
 
             <ul class=" nav_items flex">
-                <li><a class="nav_item" href="/projects.html">Home</a></li>
-                <li><a aria-current="page" class="nav_item" href="/about.html">About</a></li>
+                <li><a class="nav_item" href="/index.html">Home</a></li>
+                <li><a class="nav_item" href="/about.html">About</a></li>
                 <li><a class="nav_item" href="/services.html">Services</a></li>
-                <li><a class="nav_item" href="/projects.html">Projects</a></li>
+                <li><a aria-current="page" class="nav_item" href="/projects.html">Projects</a></li>
                 <li><a class="nav_item btn btn_pry" href="#contact">Get In Touch</a></li>
             </ul>
         </nav>
