replaced youtube videos with vector images to avoid copyright infringement

--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
 
         <!-- services section  -->
         <section class="container section_spacing grid services" id="services">
-            <div class="about_services section_spacing grid">
+            <div class="services_cards services_articles section_spacing grid">
                 <p class="section_text">At ByteSized Solutions, we take a proactive and customer-centric approach to
                     delivering top-notch technology solutions. Our team is made up of experienced professionals who stay
                     ahead of the curve in terms of industry developments and advancements in cloud computing,
