--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>ByteSized Solutions</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!--font awesome-->
 </head>
 
@@ -135,10 +136,6 @@
                 success. To help you better understand the value of IT integration, we encourage you to watch this video
                 that showcases the benefits of IT and Technology for businesses. By partnering with us, you'll receive
                 personalized support from a team of experts who are dedicated to helping you reach your goals.</p>
-            <iframe src="https://www.youtube.com/embed/yBUMLYw17t4" title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-
 
             <!-- offers cards -->
             <div class="services_cards grid">
@@ -257,7 +254,7 @@
                 you find the perfect IT solution for your needs.</p>
 
             <!-- form  -->
-            <div class="form grid">
+            <div class="form_block grid">
                 <form action="#" method="get">
                     <div class="form_field">
                         <label for="fname">First Name</label>
