--- a/services.html
+++ b/services.html
@@ -50,15 +50,11 @@
 
         </section>
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Cloud Computing Solutions</h2>
             <article class="services_article_block  grid">
-                <iframe src="https://www.youtube.com/embed/hB1NVzqn7PU"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
+                <img class='card_image' src="/assets/images/network_services_vector.jpg" alt="2D vector image of cloud computing architecture">
                 <p>Cloud computing solutions are revolutionizing the way businesses approach technology. With the
                     ability to store and access data and applications remotely, businesses can take advantage of
                     increased efficiency, scalability, and cost savings. Here are some of the benefits of using cloud
@@ -84,16 +80,13 @@
             </article>
 
         </section>
+        <hr class="container">
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
             <article class="services_article_block  grid">
-                <iframe src="https://www.youtube.com/embed/1vV0t2XbtuU"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
+                <img class='card_image' src="/assets/images/security_services_vector.jpg" alt="2D vector image of cyber security personel discussing.">
                 <p>Cybersecurity is a critical concern for businesses of all sizes, as the threat of cyber attacks and
                     data breaches continues to grow. That’s why it’s so important to invest in comprehensive cyber
                     security and data protection solutions. Here are some of the benefits of doing so:</p>
@@ -112,17 +105,14 @@
                 </ul>
             </article>
         </section>
+        <hr class="container">
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Network Design and Implementation</h2>
 
             <article class="services_article_block  grid">
                 <h3>Making technology work for you, not the other way around.</h3>
-                <iframe src="https://www.youtube.com/embed/iyLWgpghjHY"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
+                <img class='card_image' src="/assets/images/network_services_vector.jpg" alt="2D vector image of a network design">
                 <p>A well-designed and implemented network is crucial for businesses to operate effectively and
                     efficiently. Here are three benefits of network design and implementation:</p>
                 <ol>
@@ -138,15 +128,15 @@
                 </ol>
             </article>
         </section>
+        <hr class="container">
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Managed IT Services</h2>
             <article class="services_article_block  grid">
-                <iframe src="https://www.youtube.com/embed/4vkIaBUsNvI"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <h3>Because technology is too complicated for just one person to handle.</h3>
+                <h3>Because technology is too complicated
+                    for just one person to handle.
+                </h3>
+                <img class='card_image' src="/assets/images/managed_it_services.jpg" alt="2D vector image of IT workers doing routing checkup">
                 <p>Managed IT services provide a comprehensive solution for businesses to manage and maintain their
                     technology infrastructure. With these services, businesses can take advantage of the latest
                     technology, increase efficiency, and reduce costs. Here are a few benefits of managed IT services:
@@ -165,43 +155,48 @@
                 </ul>
             </article>
         </section>
+        <hr class="container">
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
-                <iframe src="https://www.youtube.com/embed/fGdqnWWAXE0"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-                <h3>The era of applications; a direct window to your customers</h3>
-                <p>Software development and customization can help businesses take advantage of the latest technology to
-                    achieve their business goals. With these services, businesses can create custom software solutions
-                    that are tailored to their specific needs, increasing efficiency and reducing costs. Here are a few
-                    benefits of software development and customization:</p>
-                <ul>
-                    <li>Tailored Solutions: Custom software solutions are designed to meet the specific needs of a
-                        business, ensuring that the technology is optimized for their workflows and processes. This can
-                        increase efficiency and reduce costs by eliminating the need for businesses to use multiple,
-                        disparate technologies.</li>
-                    <li>Flexibility: Custom software solutions are flexible and can be easily adapted as your business
-                        changes. This allows businesses to keep pace with changing technologies and ensure that their
-                        technology investments are aligned with their business goals.</li>
-                    <li>Expertise: Working with software development experts can help businesses take advantage of the
-                        latest technology and best practices, ensuring that their custom solutions are optimized for
-                        performance, scalability, and security.</li>
-                </ul>
+                <h3>The era of applications; a direct win
+                    <img class='card_image' src="/assets/images/software_services_vestor.jpg"
+                        alt="vector image of software developers discussing">
+                    <h3>ow to your customers</h3>
+                    <p>Software development and customization can help businesses take advantage of the latest
+                        technology to
+                        achieve their business goals. With these services, businesses can create custom software
+                        solutions
+                        that are tailored to their specific needs, increasing efficiency and reducing costs. Here are a
+                        few
+                        benefits of software development and customization:</p>
+                    <ul>
+                        <li>Tailored Solutions: Custom software solutions are designed to meet the specific needs of a
+                            business, ensuring that the technology is optimized for their workflows and processes. This
+                            can
+                            increase efficiency and reduce costs by eliminating the need for businesses to use multiple,
+                            disparate technologies.</li>
+                        <li>Flexibility: Custom software solutions are flexible and can be easily adapted as your
+                            business
+                            changes. This allows businesses to keep pace with changing technologies and ensure that
+                            their
+                            technology investments are aligned with their business goals.</li>
+                        <li>Expertise: Working with software development experts can help businesses take advantage of
+                            the
+                            latest technology and best practices, ensuring that their custom solutions are optimized for
+                            performance, scalability, and security.</li>
+                    </ul>
             </article>
         </section>
+        <hr class="container">
 
-        <section class="about_services container section_spacing grid services_articles">
+        <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Quality Assurance and Testing</h2>
             <article class="services_article_block  grid">
-                <iframe src="https://www.youtube.com/embed/0hzqHwu1i_I"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-
                 <h3>Be reliable, stay reliable!</h3>
+                <img class='card_image' src="/assets/images/testing_services_vector.jpg"
+                alt="vector image of people performing a software test">
                 <p>Quality assurance and testing is a critical aspect of software development and technology management.
                     With these services, businesses can ensure that their technology solutions are reliable, efficient,
                     and secure. Here are a few benefits of quality assurance and testing:</p>
