added image credits to service page

--- a/services.html
+++ b/services.html
@@ -54,7 +54,10 @@
             <h2>Cloud Computing Solutions</h2>
             <article class="services_article_block  grid">
                 <h3>Cloud computing: The future of computing, in a fluffy white package.</h3>
-                <img class='card_image' src="/assets/images/network_services_vector.jpg" alt="2D vector image of cloud computing architecture">
+                <img class='card_image' src="/assets/images/network_services_vector.jpg"
+                    alt="2D vector image of cloud computing architecture">
+
+                <p class="credit">Image by fullvector on Freepik</p>
                 <p>Cloud computing solutions are revolutionizing the way businesses approach technology. With the
                     ability to store and access data and applications remotely, businesses can take advantage of
                     increased efficiency, scalability, and cost savings. Here are some of the benefits of using cloud
@@ -85,8 +88,12 @@
         <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Cyber Security and Data Protection</h2>
             <article class="services_article_block  grid">
+                <p class="credit">Image by jcomp on Freepik</p>
                 <h3>Why did the cyber criminal cross the network? To get to the other side and steal your data!</h3>
-                <img class='card_image' src="/assets/images/security_services_vector.jpg" alt="2D vector image of cyber security personel discussing.">
+                <img class='card_image' src="/assets/images/security_services_vector.jpg"
+                    alt="2D vector image of cyber security personel discussing.">
+                <p class="credit">Image by fullvector on Freepik</p>
+
                 <p>Cybersecurity is a critical concern for businesses of all sizes, as the threat of cyber attacks and
                     data breaches continues to grow. That’s why it’s so important to invest in comprehensive cyber
                     security and data protection solutions. Here are some of the benefits of doing so:</p>
@@ -112,7 +119,10 @@
 
             <article class="services_article_block  grid">
                 <h3>Making technology work for you, not the other way around.</h3>
-                <img class='card_image' src="/assets/images/network_services_vector.jpg" alt="2D vector image of a network design">
+                <img class='card_image' src="/assets/images/network_services_vector.jpg"
+                    alt="2D vector image of a network design">
+                <p class="credit">Image by fullvector on Freepik</p>
+
                 <p>A well-designed and implemented network is crucial for businesses to operate effectively and
                     efficiently. Here are three benefits of network design and implementation:</p>
                 <ol>
@@ -135,8 +145,12 @@
             <article class="services_article_block  grid">
                 <h3>Because technology is too complicated
                     for just one person to handle.
+
                 </h3>
-                <img class='card_image' src="/assets/images/managed_it_services.jpg" alt="2D vector image of IT workers doing routing checkup">
+                <img class='card_image' src="/assets/images/managed_it_services.jpg"
+                    alt="2D vector image of IT workers doing routing checkup">
+                <p class="credit">Image by fullvector on Freepik</p>
+
                 <p>Managed IT services provide a comprehensive solution for businesses to manage and maintain their
                     technology infrastructure. With these services, businesses can take advantage of the latest
                     technology, increase efficiency, and reduce costs. Here are a few benefits of managed IT services:
@@ -160,11 +174,14 @@
         <section class="services_page_articles container section_spacing grid services_articles">
             <h2>Software Development and Customization</h2>
             <article class="services_article_block  grid">
-                <h3>The era of applications; a direct win
+                <h3>The era of applications; a direct window to your customers</h3>
                     <img class='card_image' src="/assets/images/software_services_vestor.jpg"
                         alt="vector image of software developers discussing">
-                    <h3>ow to your customers</h3>
+                   
+                    <p class="credit">Image by fullvector on Freepik</p>
+
                     <p>Software development and customization can help businesses take advantage of the latest
+
                         technology to
                         achieve their business goals. With these services, businesses can create custom software
                         solutions
@@ -196,7 +213,10 @@
             <article class="services_article_block  grid">
                 <h3>Be reliable, stay reliable!</h3>
                 <img class='card_image' src="/assets/images/testing_services_vector.jpg"
-                alt="vector image of people performing a software test">
+                    alt="vector image of people performing a software test">
+                <p class="credit">Image by pch.vector on Freepik</p>
+
+                
                 <p>Quality assurance and testing is a critical aspect of software development and technology management.
                     With these services, businesses can ensure that their technology solutions are reliable, efficient,
                     and secure. Here are a few benefits of quality assurance and testing:</p>
